--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <body>
         <div class="header">
-            <img src="FIPU.png" alt="Logo fakulteta">
+            <img src="images/FIPU.png" alt="Logo fakulteta">
         </div>
     </body>
     <div class="left">
@@ -22,7 +22,7 @@
     </div>
     <div class="right">
         <div class="imagedesign">
-            <img src="Slika.JPG" alt="Roberta Starčić">
+            <img src="images/Slika.JPG" alt="Roberta Starčić">
         </div>
     </div>
 </body>
