--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="right">
         <div class="imagedesign">
-            <img src="images/Slika.JPG" alt="Roberta Starčić">
+            <img src="https://github.com/rstarcic/rstarcic.github.io/blob/main/images/Slika.jpg" alt="Roberta Starčić">
         </div>
     </div>
 </body>
